# bitfield-eca

./: INSTALL  Makefile.in  README  config.h.in  configure  configure.ac  eca-internals.h  eca.c  eca.h  libeca.pc.in
examples/: Makefile.in  eca.c  rule30.c
man/: Makefile.in  eca.3  eca.3.in
tests/: Makefile.in  test1.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c  test8.c  test9.c
